# depth-of-satisficing

./: .gitignore  CLAUDE.md  DATA_MANIFEST.md  LICENSE  README.md  config.yaml  config_2026_04.yaml  config_2026_05.yaml  config_2026_06.yaml  config_chesscom.yaml  config_syn.yaml  justfile  main.py  osf_deposit.py  pyproject.toml  run_month.sh
paper/: manuscript.tex  manuscript_article.tex  preregistration.md  preregistration_v2.md  refs.bib  sn-jnl.cls  sn-nature.bst  supp_instant_moves.tex
src/: analyze.py  build_dataset.py  diag.py  download_data.py  early_read.py  engine_analysis.py  fetch_broadcasts.py  fetch_chesscom.py  fig_swing_compare.py  figstyle.py  gen_smoke_games.py  instant_moves.py  irt_grm.py  irt_prototype.py  maia_features.py  maia_otb_match.py  maia_otb_traps.py  model.py  parse_games.py  replicate.py  run_engine.py  select_positions.py  smoke_check.py  synthetic_agents.py  train.py
